--- a/assets/main.scss
+++ b/assets/main.scss
@@ -49,6 +49,10 @@ footer.site-footer {
    padding: 10px;
 }
 
+.center-text {
+   text-align: center;
+}
+
 .center-image {
    margin: 0 auto;
    display: block;
