--- a/assets/main.scss
+++ b/assets/main.scss
@@ -67,6 +67,10 @@ footer.site-footer {
    margin-bottom: 10px;
 }
 
+.tag-listing > span {
+   padding-top: 5px;
+}
+
 .tag-listing {
    display: flex;
    flex-wrap: wrap;
