--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,12 @@
           {%- assign sorted_pages = site.pages | sort: "order" -%}
           {%- for page in sorted_pages -%}
             {%- if page.nav-title  -%}
-              <a class="page-link" href="{{ page.url | relative_url }}">{{ page.nav-title | escape }}</a>
+              {% assign target = page.url | relative_url %}
+              {% if page.nav-target %}
+                {% assign target = page.nav-target %}
+              {% endif %}
+
+              <a class="page-link" href="{{ target }}">{{ page.nav-title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
         </div>
