Moved some assets around according to the LINQS webstite style.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,9 @@
 
   {%- seo -%}
 
-  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
-  <script type="text/javascript" src="{{ "/assets/jquery-3.3.1.min.js" | relative_url }}"></script>
-  <script type="text/javascript" src="{{ "/assets/main.js" | relative_url }}"></script>
+  <link rel="stylesheet" href="{{ "/assets/style/main.css" | relative_url }}">
+  <script type="text/javascript" src="{{ "/assets/js/vendor/jquery-3.3.1.min.js" | relative_url }}"></script>
+  <script type="text/javascript" src="{{ "/assets/js/main.js" | relative_url }}"></script>
 
   {%- feed_meta -%}
 
