--- a/_layouts/pubs.html
+++ b/_layouts/pubs.html
@@ -4,6 +4,7 @@ layout: default
 
 <link rel="stylesheet" href="{{ "/assets/style/pubs.css" | relative_url }}">
 <script type="text/javascript" src="{{ "/assets/js/pubs.js" | relative_url }}"></script>
+<script type="text/javascript" src="{{ site.linqs_website }}/api/publications.js"></script>
 
 <script>
     window.linqs = window.linqs || {};
